--- a/8200/HW6/HW6.tex
+++ b/8200/HW6/HW6.tex
@@ -78,4 +78,47 @@
 
 \end{newproof}
 
+\begin{statement}
+  Let $X$ be the space obtained from a torus $S^1 \times S^1$ by attaching a Mobius band via a 
+  homeomorphism from the boundary circle of the Mobius band to the circle $S^1 \times \{x_0\}$ 
+  in the torus. Compute $\pi_1(X)$, describe the universal cover of $X$, and describe the action 
+  of $\pi_1(X)$ on the universal cover. Do the same for the space $Y$ obtained by attaching 
+  a Mobius band to $\mathbb{R}P^2$ formed by the 1-skeleton of the usual CW structure on $\mathbb{R}P^2$. 
+\end{statement}
+
+\begin{newproof}
+
+\end{newproof}
+
+\begin{statement}
+  Let $\phi: \mathbb{R}^2 \to \mathbb{R}^2$ be the linear transformation $\phi(x,y)=(2x,y/2)$. This generates 
+  an action of $\mathbb{Z}$ on $X = \mathbb{R} - \{0\}$. Show this action is a covering space action and 
+  compute $\pi_1(X \setminus \mathbb{Z})$. Show the orbit space $X \setminus \mathbb{Z}$ is 
+  non-Hausdorff, and describe how it is a union of four subspaces homeomorphic to $S^1 \times \mathbb{R}$, coming 
+  from the complementary components of the $x$-axis and the $y$-axis. 
+\end{statement}
+
+\begin{newproof}
+
+\end{newproof}
+
+\begin{statement}
+   For a covering space $p: \tilde{X} \to X$ connected, locally path-connected, and semilocally simply-connected, 
+   show:
+   \begin{itemize}
+     \item The components of $\tilde{X}$ are in one-to-one corrspondence with the orbits of the action of 
+\end{statement}
+
+\begin{newproof}
+
+\end{newproof}
+
+\begin{statement}
+
+\end{statement}
+
+\begin{newproof}
+
+\end{newproof}
+
 \end{document}
