--- a/8200/HW8/HW8.tex
+++ b/8200/HW8/HW8.tex
@@ -51,16 +51,16 @@
 
 \begin{newtitle}
   \begin{center}
-    \textbf{\Huge Homework}
+    \textbf{\Huge 8200 Homework 8}
   \end{center}
-  \textbf{Dahlen Elstran} \hfill \textbf{\today}
+  \textbf{} \hfill \textbf{\today}
 \end{newtitle}
 
 \begin{statement}
-  This is a statement
+  Determine whether there exists a short exact sequence $0 \to \Z_4 \to \Z_8 \bigoplus \Z_2 \to \Z_4 \to 0$.
+  More generally, determine which abelian groups $A$ fit into a short exact sequence 
+  $0 \to \Z_{p^m} \to A \to \Z_{p^n} \to 0$ with $p$ prime. What about the case of short exact 
+  sequences $0 \to \Z \to A \to \Z_n \to 0$?
 \end{statement}
-\begin{newproof}
-  This is a proof
-\end{newproof}
 
 \end{document}
