--- a/stylingtesting/homework.tex
+++ b/stylingtesting/homework.tex
@@ -6,6 +6,7 @@
 \renewcommand\qedsymbol{$\blacksquare$}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\C}{\mathbb{C}}
 \tcbuselibrary{most}
 
 \newtcolorbox{newtitle}{
@@ -14,7 +15,6 @@
   colback=white,
   boxsep=5pt,
   arc=8pt,
-  sharp corners=south,
   borderline={0.5pt}{0pt}{black},
   borderline={1.8pt}{-5pt}{black},
   after skip=30pt
