--- a/stylingtesting/probbank.tex
+++ b/stylingtesting/probbank.tex
@@ -6,6 +6,7 @@
 \renewcommand\qedsymbol{$\blacksquare$}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\C}{\mathbb{C}}
 \tcbuselibrary{most}
 
 \newtcolorbox{newtitle}{
