--- a/quals/topology/probbank/probbank.tex
+++ b/quals/topology/probbank/probbank.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx,tikzsymbols,tcolorbox}
 \renewcommand\qedsymbol{$\blacksquare$}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\C}{\mathbb{C}}
 \newcommand{\R}{\mathbb{R}}
 \tcbuselibrary{most}
 
@@ -86,7 +87,18 @@
 \end{hatcher}
 
 \begin{hatcher}[0.6]
-    
+  \begin{itemize}
+    \item[(a)] Let $X$ be the subspace of $\R^2$ consisting of the horizontal segment $[0,1] \times \{0\}$ 
+      together with all the vertical segments $\{r\} \times [0,1-r]$ for $r$ a rational number in 
+      $[0,1]$. Show that $X$ deformation retracts to any point in the segment $[0,1] \times \{ 0\}$, but
+      not to any other point. [See the preceding problem]
+    \item[(b)] Let $Y$ be the subspace of $\R^2$ that is the union of an infinite number of copies of $X$ 
+      arranged as in the figure below. Show that $Y$ is contractible but does not deformation retract 
+      onto any point. 
+    \item[(c)] Let $Z$ be the zigzag subspace of $Y$ homeomorphic to $/R$ indicated by the heavier line. 
+      Show there is a deformation retraction in the weak sense (see Exercise 4) of $Y$ onto $Z$, but no true 
+      deformation retraction.
+  \end{itemize}
 \end{hatcher}
 
 \begin{hatcher}[0.10]
@@ -98,42 +110,42 @@
 \end{hatcher}
 
 \begin{hatcher}[0.16]
-    
+  Show that $S^{\infty}$ is contractible.
 \end{hatcher}
 
 \begin{hatcher}[0.17]
-    
+    Construct a 2-dimensional cellcomplex that contains both an annulus $S^1 \times I$ and a Mobius band as 
+    deformation retractions.
 \end{hatcher}
 
 \begin{hatcher}[0.20]
     Show that the subspace $X \subset \mathbb{R}^3$ formed by a Klein bottle intersecting itself in a circle is homotopy equivalent to $S^1 \vee S^1 \vee S^1$.
 \end{hatcher}
 
-\begin{center} \section*{Homework 2} \end{center}
+% \begin{center} \section*{Homework 2} \end{center}
 
-\begin{center} \section*{Homework 3} \end{center}
+% \begin{center} \section*{Homework 3} \end{center}
 
-\begin{center} \section*{Homework 4} \end{center}
+% \begin{center} \section*{Homework 4} \end{center}
 
-\begin{center} \section*{Homework 5} \end{center}
+% \begin{center} \section*{Homework 5} \end{center}
 
-\begin{center} \section*{Midterm} \end{center}
+% \begin{center} \section*{Midterm} \end{center}
 
-\begin{center} \section*{Homework 6} \end{center}
+% \begin{center} \section*{Homework 6} \end{center}
 
-\begin{center} \section*{Homework 7} \end{center}
+% \begin{center} \section*{Homework 7} \end{center}
 
-\begin{center} \section*{Homework 8} \end{center}
+% \begin{center} \section*{Homework 8} \end{center}
 
-\begin{center} \section*{Homework 9} \end{center}
+% \begin{center} \section*{Homework 9} \end{center}
 
-\begin{center} \section*{Homework 10} \end{center}
+% \begin{center} \section*{Homework 10} \end{center}
 
-\begin{center} \section*{Homework 11} \end{center}
+% \begin{center} \section*{Homework 11} \end{center}
 
-\begin{center} \section*{Final} \end{center}
+% \begin{center} \section*{Final} \end{center}
 
-\begin{center} \section*{Bonus Assignment} \end{center}
-
+% \begin{center} \section*{Bonus Assignment} \end{center}
 
 \end{document}
