qual studying biatch:

--- a/quals/topology/probbank/probbank.tex
+++ b/quals/topology/probbank/probbank.tex
@@ -109,31 +109,31 @@
     Show that the subspace $X \subset \mathbb{R}^3$ formed by a Klein bottle intersecting itself in a circle is homotopy equivalent to $S^1 \vee S^1 \vee S^1$.
 \end{hatcher}
 
-\begin{center} \section*{Homework 2} \end{center}
+% \begin{center} \section*{Homework 2} \end{center}
 
-\begin{center} \section*{Homework 3} \end{center}
+% \begin{center} \section*{Homework 3} \end{center}
 
-\begin{center} \section*{Homework 4} \end{center}
+% \begin{center} \section*{Homework 4} \end{center}
 
-\begin{center} \section*{Homework 5} \end{center}
+% \begin{center} \section*{Homework 5} \end{center}
 
-\begin{center} \section*{Midterm} \end{center}
+% \begin{center} \section*{Midterm} \end{center}
 
-\begin{center} \section*{Homework 6} \end{center}
+% \begin{center} \section*{Homework 6} \end{center}
 
-\begin{center} \section*{Homework 7} \end{center}
+% \begin{center} \section*{Homework 7} \end{center}
 
-\begin{center} \section*{Homework 8} \end{center}
+% \begin{center} \section*{Homework 8} \end{center}
 
-\begin{center} \section*{Homework 9} \end{center}
+% \begin{center} \section*{Homework 9} \end{center}
 
-\begin{center} \section*{Homework 10} \end{center}
+% \begin{center} \section*{Homework 10} \end{center}
 
-\begin{center} \section*{Homework 11} \end{center}
+% \begin{center} \section*{Homework 11} \end{center}
 
-\begin{center} \section*{Final} \end{center}
+% \begin{center} \section*{Final} \end{center}
 
-\begin{center} \section*{Bonus Assignment} \end{center}
+% \begin{center} \section*{Bonus Assignment} \end{center}
 
 
 \end{document}
