--- a/quals/topology/topology.tex
+++ b/quals/topology/topology.tex
@@ -458,4 +458,31 @@ And there is a similar setup for their respective fundamental groups:
     Show that the subspace $X \subset \mathbb{R}^3$ formed by a Klein bottle intersecting itself in a circle is homotopy equivalent to $S^1 \vee S^1 \vee S^1$.
 \end{statement}
 
+\newpage
+
+\section*{Notes}
+
+\subsection*{Mayer-Vietorus}
+
+You take a space $X$, find an $A$ and a $B$ such that $A \cup B = X$ and $A \cap B$ is open.
+
+Then you can set up a long exact sequence. 
+
+FINISH LATER
+
+\subsection*{Van Kampen}
+
+Like MV for fundamental groups, you look for an $A$ and $B$ with an open intersection. Look for 
+any identifications in the intersection.
+
+FINISH LATER
+
+\subsection*{Classification of Surfaces}
+
+Good blog post
+
+Euler Characteristic: $\xi(X) = \text{# of 0-cells} - \text{# of 1-cells} + \text{# of 2-cells}$
+
+Genus for nonorientable: 
+
 \end{document}
